unhide curve does not refresh the viewport properly. #65053

Closed
opened 2019-05-24 07:55:10 +02:00 by Massimiliano Puliero · 6 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 425.31

Blender Version
Broken: version: 2.80 (sub 72), branch: blender2.7, commit date: 2019-05-23 20:37, hash: b3f96da2e6
Worked: 2.7x

Short description of error
un-hide curves doesn't refresh the viewport, in fact is only showing the handles but not the geometry.

Please take a look at the atteched gif.

Thank you

curve_refresh.gif

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 425.31 **Blender Version** Broken: version: 2.80 (sub 72), branch: blender2.7, commit date: 2019-05-23 20:37, hash: `b3f96da2e6` Worked: 2.7x **Short description of error** un-hide curves doesn't refresh the viewport, in fact is only showing the handles but not the geometry. Please take a look at the atteched gif. Thank you ![curve_refresh.gif](https://archive.blender.org/developer/F7064617/curve_refresh.gif)

Added subscriber: @MassimilianoPuliero

Added subscriber: @MassimilianoPuliero
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm, think it is the same reason as #64829.
Will check if ID_RECALC_COPY_ON_WRITE fixes here, too...

Can confirm, think it is the same reason as #64829. Will check if `ID_RECALC_COPY_ON_WRITE` fixes here, too...

This issue was referenced by 1fdea49fcc

This issue was referenced by 1fdea49fccf6513e4d28d408df0287d9763b440c
Member

was already doing ID_RECALC_COPY_ON_WRITE, seems we need ID_RECALC_GEOMETRY here as well...

was already doing `ID_RECALC_COPY_ON_WRITE`, seems we need `ID_RECALC_GEOMETRY` here as well...
Philipp Oeser self-assigned this 2019-05-24 11:54:49 +02:00
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65053
No description provided.