Fix T65053: unhide curve does not refresh the viewport properly

Reviewers: sergey

Maniphest Tasks: T65053

Differential Revision: https://developer.blender.org/D4937